[gd_scene load_steps=5 format=3 uid="uid://u5tsa603ttky"]

[ext_resource type="Script" path="res://Player1.gd" id="1_6xmmi"]
[ext_resource type="Script" path="res://Player2.gd" id="2_trnel"]
[ext_resource type="Script" path="res://Bullet.gd" id="3_kh7ph"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1ail8"]
radius = 5.0

[node name="World" type="Node2D"]

[node name="Player1" type="Node2D" parent="."]

[node name="Player1Ship" type="CharacterBody2D" parent="Player1"]
position = Vector2(243, 331)
collision_layer = 255
collision_mask = 255
motion_mode = 1
script = ExtResource("1_6xmmi")

[node name="CenterCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="CenterPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/CenterPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/CenterPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LeftCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LeftPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/LeftPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/LeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="UpperLeftCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperLeftPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/UpperLeftPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/UpperLeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="UpperCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/UpperPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/UpperPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="UpperRightCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperRightPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/UpperRightPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/UpperRightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="RightCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="RightPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/RightPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/RightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LowerRightCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerRightPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/LowerRightPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/LowerRightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LowerCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/LowerPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/LowerPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="LowerLeftCollision" type="CollisionPolygon2D" parent="Player1/Player1Ship"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerLeftPolygon" type="CanvasGroup" parent="Player1/Player1Ship"]

[node name="Fill" type="Polygon2D" parent="Player1/Player1Ship/LowerLeftPolygon"]
color = Color(0.337255, 0.505882, 1, 1)
antialiased = true
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player1/Player1Ship/LowerLeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 1.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Node2D" type="Node2D" parent="Player1"]

[node name="Background" type="Polygon2D" parent="Player1/Node2D"]
color = Color(0.811765, 0, 0.12549, 1)
polygon = PackedVector2Array(0, 0, 500, 0, 500, 20, 0, 20)

[node name="Bar" type="Polygon2D" parent="Player1/Node2D"]
color = Color(0, 0.662745, 0.0196078, 1)
polygon = PackedVector2Array(0, 0, 500, 0, 500, 20, 0, 20)

[node name="Player2" type="CharacterBody2D" parent="."]
position = Vector2(907, 331)
rotation = 3.14159
motion_mode = 1
script = ExtResource("2_trnel")

[node name="CenterCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="CenterPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/CenterPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/CenterPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LeftCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LeftPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/LeftPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/LeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="UpperLeftCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperLeftPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/UpperLeftPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/UpperLeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="UpperCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/UpperPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/UpperPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="UpperRightCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="UpperRightPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/UpperRightPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/UpperRightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="RightCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="RightPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/RightPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/RightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LowerRightCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerRightPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/LowerRightPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/LowerRightPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LowerCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/LowerPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/LowerPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="LowerLeftCollision" type="CollisionPolygon2D" parent="Player2"]
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="LowerLeftPolygon" type="CanvasGroup" parent="Player2"]

[node name="Fill" type="Polygon2D" parent="Player2/LowerLeftPolygon"]
color = Color(0.898039, 0.290196, 0.294118, 1)
polygon = PackedVector2Array(-20, -20, -20, 20, 40, 0)

[node name="Outline" type="Line2D" parent="Player2/LowerLeftPolygon"]
points = PackedVector2Array(-20, -20, -20, 20, 40, 0, -20, -20)
width = 0.5
default_color = Color(0.643137, 0.686275, 0.764706, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Bullet" type="Area2D" parent="."]
position = Vector2(536, 333)
collision_layer = 255
collision_mask = 255
script = ExtResource("3_kh7ph")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet"]
shape = SubResource("CircleShape2D_1ail8")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bullet"]
polygon = PackedVector2Array(20, 20, 20, -20, -20, 0)
